# redirect

./: .drone.yml  .gitignore  Dockerfile  docker_app.py  lambda_app.py  pyproject.toml  uwsgi.yaml
