[tool.poetry]
name = "redirect"
version = "0.0.0"
description = ""
authors = ["Daniel Jones <tortxof@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
boto3 = "^1.9"
zappa = "^0.48.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
